[tool.poetry]
name = "chess"
version = "0.1.0"
description = ""
authors = ["kiortir <mpgg2000@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
vk-api = "^11.9.9"
fastapi = "^0.95.2"
uvicorn = "^0.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
